--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-icomoon": "^1.0.1",
     "react-scripts": "3.1.1",
+    "react-transition-group": "^4.3.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
