Added deploy to gh package commands

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "youyoun-cv",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://youyoun.github.io/youyoun-cv",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
@@ -16,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
