--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "homepage": "https://youyoun.github.io/youyoun-cv",
   "dependencies": {
+    "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.1.1",
     "react": "^18.2.0",
@@ -12,7 +16,8 @@
     "react-icomoon": "^1.0.1",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.3.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "typescript": "^4.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
