--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,5 +101,8 @@
     "skipLibCheck": true,
     /* Skip type checking all .d.ts files. */
     "jsx": "react"
-  }
+  },
+  "include": [
+    "./src/index.d.ts"
+  ]
 }
